[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rain"
dynamic = ["version"]
authors = [
    { name = "Ankur Gupta", email = "7110058+ankur-gupta@users.noreply.github.com" },
]
description = "A live example to illustrate python packaging, testing, building, & deploying"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["template", "packaging", "testing", "building", "deploying"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.3"
]

[project.urls]
Homepage = "https://github.com/ankur-gupta/rain"
Repository = "https://github.com/ankur-gupta/rain.git"


[project.scripts]
rain_maker = "rain.cli.rain_maker:make_it_rain"

[tool.hatch.version]
path = "src/rain/version.py"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
exclude = [
    "/.github",
]
