[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rain"
dynamic = ["version"]
authors = [
    { name = "Ankur Gupta", email = "7110058+ankur-gupta@users.noreply.github.com" },
]
description = "A live example to illustrate python packaging, testing, building, & deploying"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["template", "packaging", "testing", "building", "deploying"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.3"
]

[project.urls]
Homepage = "https://github.com/ankur-gupta/rain"
Repository = "https://github.com/ankur-gupta/rain.git"

[project.scripts]
rain_maker = "rain.cli.rain_maker:make_it_rain"

[tool.hatch.version]
path = "src/rain/version.py"

[tool.hatch.envs.test]
dependencies = [
    "coverage",
    "codecov",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

# Run using `hatch run test:run-coverage`, `hatch run test:no-coverage`, `hatch run test:not-slow`, ...
[tool.hatch.envs.test.scripts]
with-coverage = "pytest --cov-config=pyproject.toml --cov=rain --cov=tests"
no-coverage = "with-coverage --no-cov"
not-slow = "with-coverage -m \"not slow\""
not-random = "with-coverage -m \"not random\""
coverage-json = "coverage json"
coverage-xml = "coverage xml"


[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.11"]

[tool.coverage.run]
omit = [
    "src/rain/resources/",
    "tests/*.py"
]

# From https://docs.pytest.org/en/latest/how-to/mark.html and PEP 621
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",  # deselect with `pytest -m "not sleepy" ...`
    "random: tests using randomness; may not always pass"
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
exclude = [
    "/.github",
]
